# lazygpt

./: .gitignore  README.md  pyproject.toml  test.py
lazygpt/: agent.py  cli.py  main.py
lazygpt/tools/: google.py  web.py
