[tool.poetry]
name = "lazygpt"
version = "0.1.0"
description = ""
authors = ["Ken Hung <cchung1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.334"
chainlit = "^0.7.501"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lazygpt = "lazygpt.cli:run"