[tool.poetry]
name = "lazygpt"
version = "0.1.0"
description = ""
authors = ["Ken Hung <cchung1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.2.3"
langchain = "^0.0.334"
langchain-experimental = "^0.0.40"
chainlit = "^0.7.501"
tiktoken = "^0.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lazygpt = "lazygpt.cli:run"