[tool.poetry]
name = "lazygpt"
version = "0.1.0"
description = ""
authors = ["Ken Hung <cchung1985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.2.3"
langchain = "^0.0.334"
langchain-experimental = "^0.0.40"
chainlit = "^0.7.501"
tiktoken = "^0.5.1"
requests = "^2.31.0"
playwright = "^1.39.0"
fake-useragent = "^1.3.0"
html2text = "^2020.1.16"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lazygpt = "lazygpt.cli:run"